fix(docs-next): double spacing between h2 and h3 sections

--- a/packages/stacks-docs-next/src/app.css
+++ b/packages/stacks-docs-next/src/app.css
@@ -241,7 +241,7 @@ footer {
 }
 .docs-h3 {
     color: var(--black-500);
-    margin-top: var(--su24);
+    margin-top: var(--su48);
 }
 .docs-h4 {
     color: var(--black-400);
@@ -275,7 +275,7 @@ footer {
     margin: 20px 0;
 }
 .docs-section[data-heading-rank] {
-    margin-top: 32px;
+    margin-top: 64px;
 }
 .docs-section[data-heading-rank="2"] > .docs-p {
     color: var(--fc-medium);
